--- a/app/views/editorial/_articolo_teaser.html.erb
+++ b/app/views/editorial/_articolo_teaser.html.erb
@@ -5,7 +5,7 @@
         <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
         <h5 class="fs-postheader">
           <%= link_to(h(smart_truncate(articolo.subject, 110)),
-                       url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false))
+                       link_to_articolo(articolo))
           %>
         </h5>
       </div>
@@ -22,7 +22,7 @@
                   %>
                 <%= articolo.summary %>
                 <br/>
-                <%= link_to "Continua... ", url_for(:controller => 'editorial', :action => "articolo", :topmenu_key => articolo.section.top_section.top_menu.key, :topsection_key => articolo.section.top_section.key, :article_id => articolo.id.to_s, :article_slug => h(truncate(articolo.subject, :length => 125).to_slug), :escape => false) %>
+                <%= link_to "Continua... ", link_to_articolo(articolo) %>
               </div>
             </div>
 
