--- a/app/views/editorial/_articolo_full.html.erb
+++ b/app/views/editorial/_articolo_full.html.erb
@@ -1,102 +1,87 @@
-    <% if articolo %>
-        <div class="fs-postmetadataheader">
-          <div class="fs-art-sezione-full">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></div>
-          <div class="fs-postheader-full">      <%= articolo.subject %>  </div>
-        </div>
-        <div style="width:100%;">
-          <div class="fs-image-caption-wrapper-full">
-            <%=  image_tag artimage(articolo) %>
-  <!--
-            <%= if articolo.immagine_url.nil?
-                  if FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")
-                    image_tag("/images/commons/sections/#{articolo.top_section.immagine}")
-                  else
-                    image_tag("/images/commons/sections/no-img.jpg")
-                  end
-                else
-                  if FileTest.exist?("#{RAILS_ROOT}/public/images/articles/images_url/#{articolo.immagine_url}")
-                    image_tag("/images/articles/images_url/#{articolo.immagine_url}", :alt => h(truncate(articolo.subject, :length => 25)))
-                else
-                    image_tag("/images/commons/sections/no-img.jpg")
-                  end
+<% if articolo %>
+    <div class="fs-postmetadataheader">
+      <div class="fs-art-sezione-full">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></div>
+      <div class="fs-postheader-full">      <%= articolo.subject %>  </div>
+    </div>
+    <div style="width:100%;">
+      <div class="fs-image-caption-wrapper-full">
+        <%= image_tag art_image(articolo, :l) %>
 
-                end
-            %>
-  -->
+      <%#(FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")).to_s  +  "#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}" %>
+      <div class="fs-postmetadata-full">
+        <div class="fs-author">
+          <% if !articolo.author.user_profile.nil? %>
+              <span> <%= articolo.author.user_profile.my_avatar(:s) %></span><span style="padding-left:6px;"> <%= h articolo.author %> </span>
+          <% else %>
+              <span style="width: 32px;">Di:</span></span><span>  <%= h articolo.author %> </span>
+          <% end %>
+        </div>
+        <div class='fs-social'>
+          <div class='fs-social-fb '>
+            <script src="http://connect.facebook.net/it_IT/all.js#xfbml=1"></script>
+            <fb:like href="" layout="button_count" show_faces="false" width="450" font=""></fb:like>
           </div>
-            <%#(FileTest.exist?("#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}")).to_s  +  "#{RAILS_ROOT}/public/images/commons/sections/#{articolo.top_section.immagine}" %>
-          <div class="fs-postmetadata-full">
-            <div class="fs-author">
-              <div>  <%= gravatar_for(articolo.author) unless !articolo.author %><%= h articolo.author %>
-              </div>
-              <%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %>
+          <div class='fs-social-tw '>
+            <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="fiscosport">Tweet</a>
+            <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+          </div>
+          <div class='fs-social-gp '>
+            <!-- Place this tag where you want the +1 button to render. -->
+            <div class="g-plusone" data-size="medium" data-recommendations="false">
+              <!-- Place this tag after the last +1 button tag. -->
+              <script type="text/javascript">
+                  window.___gcfg = {lang:'it'};
+                  (function () {
+                      var po = document.createElement('script');
+                      po.type = 'text/javascript';
+                      po.async = true;
+                      po.src = 'https://apis.google.com/js/plusone.js';
+                      var s = document.getElementsByTagName('script')[0];
+                      s.parentNode.insertBefore(po, s);
+                  })();
+              </script>
             </div>
-            <div class='fs-social'>
-              <div class='fs-social-fb '>
-                <script src="http://connect.facebook.net/it_IT/all.js#xfbml=1"></script>
-                <fb:like href="" layout="button_count" show_faces="false" width="450" font=""></fb:like>
-              </div>
-              <div class='fs-social-tw '>
-                <a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal" data-via="fiscosport">Tweet</a>
-                <script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
-              </div>
-              <div class='fs-social-gp '>
-                <!-- Place this tag where you want the +1 button to render. -->
-                <div class="g-plusone" data-size="medium" data-recommendations="false">
-                  <!-- Place this tag after the last +1 button tag. -->
-                  <script type="text/javascript">
-                      window.___gcfg = {lang:'it'};
-                      (function () {
-                          var po = document.createElement('script');
-                          po.type = 'text/javascript';
-                          po.async = true;
-                          po.src = 'https://apis.google.com/js/plusone.js';
-                          var s = document.getElementsByTagName('script')[0];
-                          s.parentNode.insertBefore(po, s);
-                      })();
-                  </script>
-                </div>
-              </div>
-              <div class="fs-resize-box">
-                <a href="javascript:increaseFontSize()" id="increase" class="fs-resize-itm">A<sup>+</sup></a>
-                <a href="javascript:decreaseFontSize()" id="decrease" class="fs-resize-itm">a<sup>-</sup></a>
-              </div>
-            </div>
-            <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
           </div>
-          <div class="fs-riassunto-full"><p>
-            <%= smart_truncate(articolo.summary, 250) %></p></div>
-
-        </div>
-        <div class="clearfix">&nbsp; <br/></div>
-        <div class="fs-layout-cell layout-item-1">
-          <div id="fs-articolo-full">
-            <%= raw(articolo.description) %>
-            <br/>
+          <div class="fs-resize-box">
+            <a href="javascript:increaseFontSize()" id="increase" class="fs-resize-itm">A<sup>+</sup></a>
+            <a href="javascript:decreaseFontSize()" id="decrease" class="fs-resize-itm">a<sup>-</sup></a>
           </div>
         </div>
-        <div class="fs-attachments" >
-          <%# textilizable @notes, :attachments => @attachements, :object => @issue %>
-          <%#	parse_inline_attachments(text, project, obj, attr, only_path, options)  %>
-         <%= link_to_art_attachments(articolo, :author => false) %>
-        </div>
-        <div style="padding: 14px; text-align:center; border-top: solid 1px #bfbfbf;">
+      </div>  <%# link_to image_tag('/images/ico/facebook64.png'), 'http://www.facebook.com/sharer.php?u='+request.fullpath, :target => :blank %>
+      </div>
+      <div class="fs-riassunto-full"><p>
+        <%= h(articolo.summary) %></p></div>
 
-          <%= link_to "Ritorna...", :back, :class => "fs-vuoto-inline-button", :style => "float:none;" %>
-        </div>
-        <% if  !@quesito.nil? %>
-            <h4>L'articolo è stato ispirato da...</h4>
-            <%= render :partial => 'quesito', :locals => {:q => @quesito} %>
-        <% end %>
+    </div>
+    <div class="clearfix">&nbsp; <br/></div>
+    <div class="fs-layout-cell layout-item-1">
+      <div id="fs-articolo-full">
+        <%= raw(articolo.description) %>
+        <br/>
+      </div>
+    </div>
+    <div class="fs-attachments">
+      <%# textilizable @notes, :attachments => @attachements, :object => @issue %>
+      <%#	parse_inline_attachments(text, project, obj, attr, only_path, options)  %>
+      <%= link_to_art_attachments(articolo, :author => false) %>
+    </div>
+    <div style="padding: 14px; text-align:center; border-top: solid 1px #bfbfbf;">
 
-        <!--
-        <div class="fs-comments">
-          <span class="fs-postcommentsicon"> Scrivi un commento </span>::<span class="fs-postcommentsicon"> Leggi i commenti </span>
-        </div>
-        -->
-    <% else %>
-        <br/>
-        <p class="nodata"><%= l(:label_no_data) %></p>
-        <br/>
+      <%= link_to "Ritorna...", :back, :class => "fs-vuoto-inline-button", :style => "float:none;" %>
+    </div>
+    <% if  !@quesito.nil? %>
+        <h4>L'articolo è stato ispirato da...</h4>
+        <%= render :partial => 'quesito', :locals => {:q => @quesito} %>
     <% end %>
+
+    <!--
+    <div class="fs-comments">
+      <span class="fs-postcommentsicon"> Scrivi un commento </span>::<span class="fs-postcommentsicon"> Leggi i commenti </span>
+    </div>
+    -->
+<% else %>
+    <br/>
+    <p class="nodata"><%= l(:label_no_data) %></p>
+    <br/>
+<% end %>
 
