--- a/app/views/editorial/home.html.erb
+++ b/app/views/editorial/home.html.erb
@@ -1,3 +1,3 @@
 <h1 style="display:none">HOME<%= @base_url %>HOME</h1>
-<%= render :partial => 'articoli', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
+<%= render :partial => 'articoli_lista', :locals => {:issues => @issues, :issues_pages => @issues_pages, :issues_count => @issues_count} %>
 <%= render :partial => 'blocco_sidebar1' %>
