--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -52,7 +52,7 @@
                     <%= h(articolo.summary) %>
                     <br/> &nbsp; <br/>
 
-                    <p style="text-align: center;">
+                    <p style="text-align: right; padding-right: 200px;">
                       <%= link_to_articolo(articolo, :title => 'Continua ...', :class => "fs-blu-button") %></p>
                   </div>
                 </div>
