--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -49,7 +49,7 @@
                         <% end %>
                       </div>
                     </div>
-                    <%= h(articolo.summary) %>
+                    <%= raw(articolo.summary) %>
                     <br/> &nbsp; <br/>
 
                     <p style="text-align: right; padding-right: 200px;">
