--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -8,7 +8,7 @@
                   <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
                   <span class="fs-postdateicon" style="float:right;"><%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
                   <h5 class="fs-postheader">
-                    <%= link_to(h(articolo.subject), link_to_articolo(articolo)) %>
+                    <%=   link_to_articolo(articolo, :title=> articolo.subject ) %>
                   </h5>
                 </div>
                 <div class="fs-postcontent fs-postcontent-0 clearfix">
