--- a/app/views/editorial/_blocco_art_similari.html.erb
+++ b/app/views/editorial/_blocco_art_similari.html.erb
@@ -9,8 +9,7 @@
                 <div class="fs-content-layout">
                   <div class="fs-content-layout-row">
                     <div class="fs-layout-cell layout-item-3">
-                      <%= link_to(h(truncate(articolo.subject, :length => 50)), link_to_articolo(articolo) )  %>
-
+                      <%= link_to_articolo(articolo, :title=> h(truncate(articolo.subject, :length => 50))) %>
                        <%# articolo.section.issues.count %>
                       <span class="fs-postauthoricon">
                           <%= h articolo.author %>
@@ -19,9 +18,7 @@
 
                       <div class="fs-postcontent">
                         <div class="fs-box-link">
-                        <%= link_to(h(smart_truncate(articolo.summary, 130)),
-                            link_to_articolo(articolo))
-                        %>
+                        <%= link_to_articolo(articolo, :title=> h(smart_truncate(articolo.summary, 130))) %>
                         <br/></div>  </div>
                       <%# link_to "Continua... ", link_to_articolo(articolo) %>
                       <p class="separticle"></p>
