--- a/app/views/editorial/_viste_non_utilizzate/_save/_articolo_pinned.html.erb
+++ b/app/views/editorial/_viste_non_utilizzate/_save/_articolo_pinned.html.erb
@@ -5,9 +5,7 @@
     <div class="fs-content-layout-row">
       <div class="fs-layout-cell layout-item-0" style="width: 100%">
         <h6 style="font-size:12px; ">
-          <%= link_to (h(truncate(articolo.subject, :length => 50)),
-                       link_to_articolo(articolo))
-          %>
+          <%=  link_to_articolo(articolo , :title => h(truncate(articolo.subject, :length => 50))) %>
         </h6>
          <%# articolo.section.issues.count %>
         <span class="fs-postauthoricon">
@@ -17,9 +15,7 @@
 
         <div class="fs-postcontent" style="line-height:11px; font-size:11px;">
 
-          <%= link_to (h(truncate(articolo.summary, :length => 125)),
-              link_to_articolo(articolo))
-          %>
+          <%=  link_to_articolo(articolo , :title => h(truncate(articolo.summary, :length => 125))) %>
           <br/></div>
         <%# link_to "Continua... ", link_to_articolo(articolo) %>
         <p style="border-bottom: 1px dotted #A8ADB8; padding-bottom: 5px"></p>
