yui to settings/fee  settings/general settings/mail

--- a/app/views/editorial/profilo_edit.html.erb
+++ b/app/views/editorial/profilo_edit.html.erb
@@ -121,7 +121,10 @@
             width:'95%',
             animate:true,
             dompath:true,
-            focusAtStart:true
+            focusAtStart:false,
+            nodeChangeDelay:false,
+            removeLineBreaks:true,
+            drag:true
         };
         init_yui_editor_fs('curriculum', myConfig2);
     })
