--- a/app/views/settings/_mail_handler.html.erb
+++ b/app/views/settings/_mail_handler.html.erb
@@ -1,14 +1,14 @@
 <% form_tag({:action => 'edit', :tab => 'mail_handler'}) do %>
 
 <div class="box tabular settings">
-  <p>
+  <p class="yui-skin-sam">
     <%= setting_text_area :mail_handler_body_delimiters, :rows => 5 %>
     <br /><em><%= l(:text_line_separated) %></em>
   </p>
 </div>
 
 <div class="box tabular settings">
-<p class="yui-skin-sam"><%= setting_check_box :mail_handler_api_enabled,
+<p ><%= setting_check_box :mail_handler_api_enabled,
          :onclick => "if (this.checked) { Form.Element.enable('settings_mail_handler_api_key'); } else { Form.Element.disable('settings_mail_handler_api_key'); }"%></p>
 
 <p class="yui-skin-sam"><%= setting_text_field :mail_handler_api_key, :size => 30,
