--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -23,6 +23,10 @@
 <p><%= setting_text_field :per_page_options, :size => 20 %><br />
 <em><%= l(:text_comma_separated) %></em></p>
 
+<p><%= setting_text_field :per_page_options_fs, :size => 20 %><br />
+<em><%= l(:text_comma_separated) %></em></p>
+
+
 <p><%= setting_text_field :activity_days_default, :size => 6 %> <%= l(:label_day_plural) %></p>
 
 <p><%= setting_text_field :host_name, :size => 60 %><br />
