--- a/app/views/editorial/_articoli.html.erb
+++ b/app/views/editorial/_articoli.html.erb
@@ -1,81 +1,79 @@
 <div class="fs-layout-cell fs-content clearfix">
   <% if @issues && @issues.any? %>
-      <% @issues.each do |articolo| %>
-          <!-- qui è l'inserimento dell'articolo -->
-          <ARTICLE class="fs-post fs-article">
-            <% if articolo %>
-                <div class="fs-postmetadataheader">
-                  <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
-                  <span class="fs-postdateicon" style="float:right;"><%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
-                  <h5 class="fs-postheader">
-                    <%=   link_to_articolo(articolo, :title=> articolo.subject ) %>
-                  </h5>
-                </div>
-                <div class="fs-postcontent fs-postcontent-0 clearfix">
-                  <div class="fs-content-layout-wrapper layout-item-0">
-                    <div class="fs-image-caption-wrapper">
-                      <div class="fs-image-caption-wrapper-img">
-                        <%= image_tag art_image(articolo, :m) %>
-                        <% if articolo.se_protetto %>
-                            <div class="fs-postmetadatafooter-author-ko">
-                              <div class="fs-postmetadatafooter-author">
-                                <% if !articolo.author.user_profile.nil? %>
-                                    <span><%= articolo.author.user_profile.my_avatar(:xs) %> </span>
-                                <% else %>
-                                    <span style="width: 32px;">Di:</span>
-                                <% end %>
-                                <span style="padding-left: 6px;"> <%= h articolo.author %></span>
-                              </div>
+    <% @issues.each do |articolo| %>
+        <!-- qui è l'inserimento dell'articolo -->
+        <ARTICLE class="fs-post fs-article">
+          <% if articolo %>
+              <div class="fs-postmetadataheader">
+                <span class="fs-art-sezione">&nbsp;<%= articolo.top_section %>&nbsp;::&nbsp;<%= articolo.section %></span>
+                <span class="fs-postdateicon" style="float:right;"><%# articolo.due_date %> <%= I18n.localize(articolo.due_date.to_date, :format => :mese_anno) %></span>
+                <h5 class="fs-postheader">
+                  <%=   link_to_articolo(articolo, :title=> articolo.subject ) %>
+                </h5>
+              </div>
+              <div class="fs-postcontent fs-postcontent-0 clearfix">
+                <div class="fs-content-layout-wrapper layout-item-0">
+                  <div class="fs-image-caption-wrapper">
+                    <div class="fs-image-caption-wrapper-img">
+                      <%= image_tag art_image(articolo, :m) %>
+                      <% if articolo.se_protetto %>
+                          <div class="fs-postmetadatafooter-author-ko">
+                            <div class="fs-postmetadatafooter-author">
                               <% if !articolo.author.user_profile.nil? %>
-                                  <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
+                                  <span><%= articolo.author.user_profile.my_avatar(:xs) %> </span>
+                              <% else %>
+                                  <span style="width: 32px;">Di:</span>
                               <% end %>
+                              <span style="padding-left: 6px;"> <%= h articolo.author %></span>
                             </div>
-                            <div class="fs-postmetadatafooter-ko"></div>
-                        <% else %>
-                            <div class="fs-postmetadatafooter-author-ok">
-                              <div class="fs-postmetadatafooter-author">
-                                <% if !articolo.author.user_profile.nil? %>
-                                    <span><%= articolo.author.user_profile.my_avatar(:xs) %> </span>
-                                <% else %>
-                                    <span style="width: 32px;">Di:</span>
-                                <% end %>
-                                <span style="padding-left: 6px;"> <%= h articolo.author %></span>
-                              </div>
+                            <% if !articolo.author.user_profile.nil? %>
+                                <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
+                            <% end %>
+                          </div>
+                          <div class="fs-postmetadatafooter-ko"></div>
+                      <% else %>
+                          <div class="fs-postmetadatafooter-author-ok">
+                            <div class="fs-postmetadatafooter-author">
                               <% if !articolo.author.user_profile.nil? %>
-                                  <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
+                                  <span><%= articolo.author.user_profile.my_avatar(:xs) %> </span>
+                              <% else %>
+                                  <span style="width: 32px;">Di:</span>
                               <% end %>
+                              <span style="padding-left: 6px;"> <%= h articolo.author %></span>
                             </div>
-                            <div class="fs-postmetadatafooter-ok"></div>
-                        <% end %>
-                      </div>
+                            <% if !articolo.author.user_profile.nil? %>
+                                <div class="fs-postmetadatafooter-author-qualifica"><%= articolo.author.user_profile.fs_qualifica unless articolo.author.user_profile.fs_qualifica.nil? %>  </div>
+                            <% end %>
+                          </div>
+                          <div class="fs-postmetadatafooter-ok"></div>
+                      <% end %>
                     </div>
-                    <%= raw(articolo.summary) %>
-                    <br/> &nbsp; <br/>
-
-                    <p style="text-align: right; padding-right: 200px;">
-                      <%= link_to_articolo(articolo, :title => 'Continua ...', :class => "fs-blu-button") %></p>
                   </div>
-                </div>
-            <% else %>
-                <br/>
-                <p class="nodata"><%= l(:label_no_data) %></p>
-                <br/>
-            <% end %>
-          </ARTICLE>
-          <%# render :partial => 'articolo_teaser', :locals => {:articolo => articolo} %>
-          <br/>
-      <% end %>
-      <br/>
+                  <%= raw(articolo.summary) %>
+                  <br/> &nbsp; <br/>
 
-      <p class="pagination"><%= pagination_links_full(@issues_pages, @issues_count) %></p>
-      <br/>
+                  <p style="text-align: right; padding-right: 200px;">
+                    <%= link_to_articolo(articolo, :title => 'Continua ...', :class => "fs-blu-button") %></p>
+                </div>
+              </div>
+          <% else %>
+              <br/>
+              <p class="nodata"><%= l(:label_no_data) %></p>
+              <br/>
+          <% end %>
+        </ARTICLE>
+        <%# render :partial => 'articolo_teaser', :locals => {:articolo => articolo} %>
+        <br/>
+    <% end %>
+    <br/>
+    <p class="pagination"><%= pagination_links_full(@issues_pages, @issues_count, {}, true) %></p>
+    <br/>
 
   <% else %>
-      <br/>
+    <br/>
 
-      <p class="nodata"><%= l(:label_no_data) %></p>
-      <br/>
+    <p class="nodata"><%= l(:label_no_data) %></p>
+    <br/>
   <% end %>
   <div class="clearfix"></div>
 </div>
-
