yui settings re-fix

--- a/app/views/settings/_fee.html.erb
+++ b/app/views/settings/_fee.html.erb
@@ -84,6 +84,7 @@
     (function () {
         var myConfig1 = {
             handleSubmit:true,
+            width:'100%',
             resize:true,
             animate:true,
             dompath:true,
@@ -96,6 +97,7 @@
 
         var myConfig2 = {
             handleSubmit:true,
+            width:'100%',
             resize:true,
             animate:true,
             dompath:true,
@@ -108,6 +110,7 @@
 
         var myConfig3 = {
             handleSubmit:true,
+            width:'100%',
             resize:true,
             animate:true,
             dompath:true,
