--- a/app/views/settings/_notifications.html.erb
+++ b/app/views/settings/_notifications.html.erb
@@ -51,6 +51,7 @@
         var myConfig1 = {
             handleSubmit:true,
             resize:true,
+            width:'100%',
             animate:true,
             dompath:true,
             focusAtStart:true,
@@ -63,6 +64,7 @@
         var myConfig2 = {
             handleSubmit:true,
             resize:true,
+            width:'100%',
             animate:true,
             dompath:true,
             focusAtStart:false,
