--- a/app/views/settings/_general.html.erb
+++ b/app/views/settings/_general.html.erb
@@ -69,7 +69,7 @@
     (function () {
         var myConfig1 = {
             handleSubmit:true,
-            /* height:'200px', width:'95%',*/
+            width:'100%',
             resize:true,
             animate:true,
             dompath:true,
@@ -82,6 +82,7 @@
 
         var myConfig2 = {
             handleSubmit:true,
+            width:'100%',
             resize:true,
             animate:true,
             dompath:true,
@@ -94,6 +95,7 @@
 
         var myConfig3 = {
             handleSubmit:true,
+            width:'100%',
             resize:true,
             animate:true,
             dompath:true,
